; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_vfs_syscalls.c_umask.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_vfs_syscalls.c_umask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.umask_args = type { i32 }

@UMASK_NOXSECURITY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @umask(i32 %0, %struct.umask_args* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.umask_args*, align 8
  %6 = alloca i32*, align 8
  store i32 %0, i32* %4, align 4
  store %struct.umask_args* %1, %struct.umask_args** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load i32, i32* %4, align 4
  %8 = load %struct.umask_args*, %struct.umask_args** %5, align 8
  %9 = getelementptr inbounds %struct.umask_args, %struct.umask_args* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @UMASK_NOXSECURITY, align 4
  %12 = load i32*, i32** %6, align 8
  %13 = call i32 @umask1(i32 %7, i32 %10, i32 %11, i32* %12)
  ret i32 %13
}

declare dso_local i32 @umask1(i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
